#820 - better translation names for letter Q, refs #820

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -68,7 +68,7 @@ pro.wizard.activation.password_length=Password muss mindesten 6 Zeichen lang sei
 pro.wizard.activation.register_why=Warum muss Ich mich registrieren?
 pro.wizard.activation.subscribe_newsletter=Newsletter abonnieren
 
-quickinfo.webservice.foldersmirrored={0} von {1} PowerFolder werden online gesichert. {2} Online Speicher benutzt.
+quickinfo.webservice.folders_mirrored={0} von {1} PowerFolder werden online gesichert. {2} Online Speicher benutzt.
 
 recyclebin.confirmation.overwrite.on.restore.changed.date=Geändert {0}
 recyclebin.confirmation.overwrite.on.restore.overwrite.filename={0} überschreiben?
@@ -1035,31 +1035,31 @@ quickinfo.folder.preview=Vorschau - Keine Synchronisation
 quickinfo.folder.status_of_folder=\u00dcber {0}
 ##quickinfo.folder.up_to_date_in=Up to date in {0}
 quickinfo.friends.online={0} von {1} Freunden sind online
-quickinfo.friends.usersfound={0} Benutzer gefunden
-quickinfo.myfolders.in_sync_all=Alle PowerFolder sind synchronisiert
-quickinfo.myfolders.powerfolders={0} in {1} PowerFolder
-quickinfo.myfolders.syncing=Synchronisiere {0} PowerFolder
-quickinfo.myfolders.title=\u00dcbersicht meiner PowerFolder
-quickinfo.recylcebin.files={0} Dateien im Papierkorb
-quickinfo.recylcebin.title=Papierkorb
+quickinfo.friends.users_found={0} Benutzer gefunden
+quickinfo.my_folders.in_sync_all=Alle PowerFolder sind synchronisiert
+quickinfo.my_folders.powerfolders={0} in {1} PowerFolder
+quickinfo.my_folders.syncing=Synchronisiere {0} PowerFolder
+quickinfo.my_folders.title=\u00dcbersicht meiner PowerFolder
+quickinfo.recylce_bin.files={0} Dateien im Papierkorb
+quickinfo.recylce_bin.title=Papierkorb
 quickinfo.root.downloads={0} Download(s) k\u00fcrzlich fertiggestellt
 quickinfo.root.friends={0} Freund(e) online
-quickinfo.root.insync=Alle Folder sind synchronisiert
+quickinfo.root.in_sync=Alle Folder sind synchronisiert
 quickinfo.root.offline=Offline
 quickinfo.root.syncing=Synchronisation aktiv...
 quickinfo.root.title=Willkommen bei PowerFolder\!
 quickinfo.upload.active={0} aktive Upload(s)
 quickinfo.upload.completed={0} Upload(s) kürzlich fertiggestellt
 quickinfo.upload.title=Upload \u00dcbersicht
-quickinfo.user.isconnectedinet=ist im Internet
-quickinfo.user.isconnectedlan=ist im LAN
-quickinfo.user.isdiconnected=ist nicht verbunden
-quickinfo.user.secureconnected=Die Verbindung ist sicher
+quickinfo.user.is_connected_inet=ist im Internet
+quickinfo.user.is_connected_lan=ist im LAN
+quickinfo.user.is_diconnected=ist nicht verbunden
+quickinfo.user.secure_connected=Die Verbindung ist sicher
 quickinfo.webservice.connected=Verbunden mit dem Online Speicher
-quickinfo.webservice.foldersmirrored={0} von {1} Folder werden gesichert. {2} Online Speicher genutzt.
-quickinfo.webservice.notavailable=Online Speicher im nur LAN Modus nicht verf\u00fcgbar
-quickinfo.webservice.notconnected=Nicht mit dem Online Speicher verbunden
-quickinfo.webservice.notsetup=Online Speicher noch nicht eingerichtet
+quickinfo.webservice.folders_mirrored={0} von {1} Folder werden gesichert. {2} Online Speicher genutzt.
+quickinfo.webservice.not_available=Online Speicher im nur LAN Modus nicht verf\u00fcgbar
+quickinfo.webservice.not_connected=Nicht mit dem Online Speicher verbunden
+quickinfo.webservice.not_setup=Online Speicher noch nicht eingerichtet
 quickinfo.webservice.title=PowerFolder Online Speicher
 
 reconnect.description=Baut eine neue Verbindung zu dem Benutzer auf
