--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -926,31 +926,31 @@ quickinfo.folder.number_of_files_and_size={0} File(s), {1}
 quickinfo.folder.preview=Preview - No synchronisation
 quickinfo.folder.status_of_folder=Status of {0}
 quickinfo.friends.online={0} of {1} friend(s) are online
-quickinfo.friends.usersfound={0} users found
-quickinfo.myfolders.powerfolders={0} in {1} PowerFolder(s)
-quickinfo.myfolders.in_sync_all=All PowerFolders are synchronised
-quickinfo.myfolders.syncing=Synchronising {0} PowerFolder(s)
-quickinfo.myfolders.title=Status of My PowerFolders
-quickinfo.recylcebin.files={0} file(s) in Recycle Bin
-quickinfo.recylcebin.title=Recycle Bin
+quickinfo.friends.users_found={0} users found
+quickinfo.my_folders.powerfolders={0} in {1} PowerFolder(s)
+quickinfo.my_folders.in_sync_all=All PowerFolders are synchronised
+quickinfo.my_folders.syncing=Synchronising {0} PowerFolder(s)
+quickinfo.my_folders.title=Status of My PowerFolders
+quickinfo.recylce_bin.files={0} file(s) in Recycle Bin
+quickinfo.recylce_bin.title=Recycle Bin
 quickinfo.root.downloads={0} download(s) recently completed
 quickinfo.root.friends={0} friend(s) online
-quickinfo.root.insync=All folders are synchronised
+quickinfo.root.in_sync=All folders are synchronised
 quickinfo.root.offline=Offline
 quickinfo.root.syncing=Sync in progress...
 quickinfo.root.title=Welcome to PowerFolder\!
 quickinfo.upload.active={0} active upload(s)
 quickinfo.upload.completed={0} upload(s) recently completed
 quickinfo.upload.title=Upload Status
-quickinfo.user.isconnectedinet=Is on the Internet
-quickinfo.user.isconnectedlan=Is on LAN
-quickinfo.user.isdiconnected=Is disconnected
-quickinfo.user.secureconnected=securely connected
+quickinfo.user.is_connected_inet=Is on the Internet
+quickinfo.user.is_connected_lan=Is on LAN
+quickinfo.user.is_diconnected=Is disconnected
+quickinfo.user.secure_connected=securely connected
 quickinfo.webservice.connected=Connected to the PowerFolder Online Storage
-quickinfo.webservice.foldersmirrored={0} of {1} folders get backed up. {2} online space used.
-quickinfo.webservice.notavailable=Online Storage not available in LAN only mode
-quickinfo.webservice.notconnected=Disconnected from PowerFolder Online Storage
-quickinfo.webservice.notsetup=Online Storage not configured yet
+quickinfo.webservice.folders_mirrored={0} of {1} folders get backed up. {2} online space used.
+quickinfo.webservice.not_available=Online Storage not available in LAN only mode
+quickinfo.webservice.not_connected=Disconnected from PowerFolder Online Storage
+quickinfo.webservice.not_setup=Online Storage not configured yet
 quickinfo.webservice.title=PowerFolder Online Storage
 
 reconnect.description=Reconnects to this user now
