--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -969,31 +969,31 @@ quickinfo.folder.preview=Previsualizar - No syncronizar
 quickinfo.folder.status_of_folder=Estado de {0}
 quickinfo.folder.up_to_date_in=Actualizado en {0}
 quickinfo.friends.online={0} de {1} amigo(s) en-l\u00EDnea
-quickinfo.friends.usersfound={0} usuarios encontrados
-quickinfo.myfolders.in_sync_all=Todos los PowerFolders han sido sincronizados
-quickinfo.myfolders.powerfolders={0} en {1} PowerFolder(s)
-quickinfo.myfolders.syncing=Sincronizando {0} PowerFolder(s)
-quickinfo.myfolders.title=Estado de mis PowerFolders
-quickinfo.recylcebin.files={0} archivo(s) en la Papelera de Reciclaje
-quickinfo.recylcebin.title=Papelera de Reciclaje
+quickinfo.friends.users_found={0} usuarios encontrados
+quickinfo.my_folders.in_sync_all=Todos los PowerFolders han sido sincronizados
+quickinfo.my_folders.powerfolders={0} en {1} PowerFolder(s)
+quickinfo.my_folders.syncing=Sincronizando {0} PowerFolder(s)
+quickinfo.my_folders.title=Estado de mis PowerFolders
+quickinfo.recylce_bin.files={0} archivo(s) en la Papelera de Reciclaje
+quickinfo.recylce_bin.title=Papelera de Reciclaje
 quickinfo.root.downloads={0} descargas(s) recientemente finalizadas
 quickinfo.root.friends={0} amigo(s) en-l\u00EDnea
-quickinfo.root.insync=Todas las Carpetas estan sincronizadas
+quickinfo.root.in_sync=Todas las Carpetas estan sincronizadas
 quickinfo.root.offline=Offline
 quickinfo.root.syncing=Sincronizaci\u00F3n en progreso...
 quickinfo.root.title=Bienvenido a PowerFolder\!
 quickinfo.upload.active={0} subidas activas
 quickinfo.upload.completed={0} envio(s) completos recientes
 quickinfo.upload.title=Estado de las Subidas
-quickinfo.user.isconnectedinet=Esta en Internet
-quickinfo.user.isconnectedlan=Esta en Red Local
-quickinfo.user.isdiconnected=Esta desconectado
-quickinfo.user.secureconnected=conectado de forma segura
+quickinfo.user.is_connected_inet=Esta en Internet
+quickinfo.user.is_connected_lan=Esta en Red Local
+quickinfo.user.is_diconnected=Esta desconectado
+quickinfo.user.secure_connected=conectado de forma segura
 quickinfo.webservice.connected=Conectado al almac\u00E9n en linea de PowerFolder
-quickinfo.webservice.foldersmirrored={0} de {1} carpetas son respaldadas. {2} espacio en linea utilizado..
-quickinfo.webservice.notavailable=Almac\u00E9n en linea no accesible en modalidad LAN solamente
-quickinfo.webservice.notconnected=Desconectado del almac\u00E9n en linea de PowerFolder
-quickinfo.webservice.notsetup=El almac\u00E9n en linea no ha sido configurado
+quickinfo.webservice.folders_mirrored={0} de {1} carpetas son respaldadas. {2} espacio en linea utilizado..
+quickinfo.webservice.not_available=Almac\u00E9n en linea no accesible en modalidad LAN solamente
+quickinfo.webservice.not_connected=Desconectado del almac\u00E9n en linea de PowerFolder
+quickinfo.webservice.not_setup=El almac\u00E9n en linea no ha sido configurado
 quickinfo.webservice.title=Almac\u00E9n en linea de PowerFolder
 
 reconnect.description=Reconectarse a este usuario ahora
