--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -970,31 +970,31 @@ quickinfo.folder.preview=Anteprima - Nessuna sincronizzazione
 quickinfo.folder.status_of_folder=Stato di {0}
 quickinfo.folder.up_to_date_in=Aggiornamento in {0}
 quickinfo.friends.online={0} di {1} amico(i) sono online
-quickinfo.friends.usersfound={0} utenti trovati
-quickinfo.myfolders.in_sync_all=Tutti i PowerFolders sono stati sincronizzati
-quickinfo.myfolders.powerfolders={0} in {1} PowerFolder(s)
-quickinfo.myfolders.syncing=Sincronizzazione di {0} PowerFolder(s)
-quickinfo.myfolders.title=Stato dei miei PowerFolders
-quickinfo.recylcebin.files={0} file(s) nel Cestino
-quickinfo.recylcebin.title=Cestino
+quickinfo.friends.users_found={0} utenti trovati
+quickinfo.my_folders.in_sync_all=Tutti i PowerFolders sono stati sincronizzati
+quickinfo.my_folders.powerfolders={0} in {1} PowerFolder(s)
+quickinfo.my_folders.syncing=Sincronizzazione di {0} PowerFolder(s)
+quickinfo.my_folders.title=Stato dei miei PowerFolders
+quickinfo.recylce_bin.files={0} file(s) nel Cestino
+quickinfo.recylce_bin.title=Cestino
 quickinfo.root.downloads={0} download(s) recentemente completati
 quickinfo.root.friends={0} amico(i) online
-quickinfo.root.insync=Tutte le cartelle sono sincronizzate
+quickinfo.root.in_sync=Tutte le cartelle sono sincronizzate
 quickinfo.root.offline=Offline
 quickinfo.root.syncing=Sincronizzazione in corso...
 quickinfo.root.title=Benvenuto in PowerFolder\!
 quickinfo.upload.active={0} upload(s) attivo
 quickinfo.upload.completed={0} upload(s) appena completati
 quickinfo.upload.title=Stato Upload
-quickinfo.user.isconnectedinet=\u00C8 in Internet
-quickinfo.user.isconnectedlan=\u00C8 sulla LAN
-quickinfo.user.isdiconnected=\u00C8 disconnesso
-quickinfo.user.secureconnected=connesso in modo sicuro
+quickinfo.user.is_connected_inet=\u00C8 in Internet
+quickinfo.user.is_connected_lan=\u00C8 sulla LAN
+quickinfo.user.is_diconnected=\u00C8 disconnesso
+quickinfo.user.secure_connected=connesso in modo sicuro
 quickinfo.webservice.connected=Connesso al PowerFolder Online Storage
-quickinfo.webservice.foldersmirrored={0} cartella su {1} \u00E8 stata salvata. {2} spazi online utilizzati.
-quickinfo.webservice.notavailable=Memorizzazione online non disponibile nella modalit\u00E0 solo LAN
-quickinfo.webservice.notconnected=Disconnesso dal PowerFolder Online Storage
-quickinfo.webservice.notsetup=Online Storage non ancora configurato
+quickinfo.webservice.folders_mirrored={0} cartella su {1} \u00E8 stata salvata. {2} spazi online utilizzati.
+quickinfo.webservice.not_available=Memorizzazione online non disponibile nella modalit\u00E0 solo LAN
+quickinfo.webservice.not_connected=Disconnesso dal PowerFolder Online Storage
+quickinfo.webservice.not_setup=Online Storage non ancora configurato
 quickinfo.webservice.title=PowerFolder Online Storage
 
 reconnect.description=Riconnettiti a questo utente ora
