--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -970,31 +970,31 @@ quickinfo.folder.number_of_files_and_size={0} Bestand(en), {1}
 quickinfo.folder.status_of_folder=Status van {0}
 ##quickinfo.folder.up_to_date_in=Up to date in {0}
 quickinfo.friends.online={0} van {1} vrienden zijn online
-quickinfo.friends.usersfound={0} gebruikers gevonden
-##quickinfo.myfolders.in_sync_all=All PowerFolders are synchronized
-##quickinfo.myfolders.powerfolders={0} in {1} PowerFolder(s)
-##quickinfo.myfolders.syncing=Synchronizing {0} PowerFolder(s)
-##quickinfo.myfolders.title=Status of My PowerFolders
-quickinfo.recylcebin.files={0} bestand(en) in Prullenbak
-quickinfo.recylcebin.title=Prullenbak
+quickinfo.friends.users_found={0} gebruikers gevonden
+##quickinfo.my_folders.in_sync_all=All PowerFolders are synchronized
+##quickinfo.my_folders.powerfolders={0} in {1} PowerFolder(s)
+##quickinfo.my_folders.syncing=Synchronizing {0} PowerFolder(s)
+##quickinfo.my_folders.title=Status of My PowerFolders
+quickinfo.recylce_bin.files={0} bestand(en) in Prullenbak
+quickinfo.recylce_bin.title=Prullenbak
 quickinfo.root.downloads={0} download(s) recent voltooid
 quickinfo.root.friends={0} vriend(en) verbonden
-quickinfo.root.insync=Alle Folders zijn gesynchroniseerd
+quickinfo.root.in_sync=Alle Folders zijn gesynchroniseerd
 quickinfo.root.offline=Niet verbonden
 quickinfo.root.syncing=Bezig met synchroniseren...
 quickinfo.root.title=Welkom by PowerFolder\!
 quickinfo.upload.active={0} actieve upload(s)
 ##quickinfo.upload.completed={0} upload(s) recently completed
 quickinfo.upload.title=Upload Status
-quickinfo.user.isconnectedinet=Is op het Internet
-quickinfo.user.isconnectedlan=Is op LAN
-quickinfo.user.isdiconnected=Is niet verbonden
-quickinfo.user.secureconnected=versleuteld verbonden
+quickinfo.user.is_connected_inet=Is op het Internet
+quickinfo.user.is_connected_lan=Is op LAN
+quickinfo.user.is_diconnected=Is niet verbonden
+quickinfo.user.secure_connected=versleuteld verbonden
 ##quickinfo.webservice.connected=Connected to the PowerFolder Online Storage
-##quickinfo.webservice.foldersmirrored={0} of {1} folders get backed up. {2} online space used.
-##quickinfo.webservice.notavailable=Online Storage not available in LAN only mode
-##quickinfo.webservice.notconnected=Disconnected from PowerFolder Online Storage
-##quickinfo.webservice.notsetup=Online Storage not configured yet
+##quickinfo.webservice.folders_mirrored={0} of {1} folders get backed up. {2} online space used.
+##quickinfo.webservice.not_available=Online Storage not available in LAN only mode
+##quickinfo.webservice.not_connected=Disconnected from PowerFolder Online Storage
+##quickinfo.webservice.not_setup=Online Storage not configured yet
 ##quickinfo.webservice.title=PowerFolder Online Storage
 
 reconnect.description=Reconnects to this user now
