--- a/src/etc/Translation_pl.properties
+++ b/src/etc/Translation_pl.properties
@@ -970,31 +970,31 @@ quickinfo.folder.number_of_files_and_size={0} Plik\u00f3w, {1}
 quickinfo.folder.status_of_folder=Stan folderu {0}
 ##quickinfo.folder.up_to_date_in=Up to date in {0}
 quickinfo.friends.online={0} z {1} znajomych jest online
-quickinfo.friends.usersfound=Znaleziono {0} u\u017cytkownik\u00f3w
-##quickinfo.myfolders.in_sync_all=All PowerFolders are synchronized
-##quickinfo.myfolders.powerfolders={0} in {1} PowerFolder(s)
-##quickinfo.myfolders.syncing=Synchronizing {0} PowerFolder(s)
-##quickinfo.myfolders.title=Status of My PowerFolders
-quickinfo.recylcebin.files={0} plik\u00f3w w Koszu
-quickinfo.recylcebin.title=Kosz
+quickinfo.friends.users_found=Znaleziono {0} u\u017cytkownik\u00f3w
+##quickinfo.my_folders.in_sync_all=All PowerFolders are synchronized
+##quickinfo.my_folders.powerfolders={0} in {1} PowerFolder(s)
+##quickinfo.my_folders.syncing=Synchronizing {0} PowerFolder(s)
+##quickinfo.my_folders.title=Status of My PowerFolders
+quickinfo.recylce_bin.files={0} plik\u00f3w w Koszu
+quickinfo.recylce_bin.title=Kosz
 quickinfo.root.downloads=Liczba zako\u0144czonych pobra\u0144\: {0}
 quickinfo.root.friends={0} znajomych online
-quickinfo.root.insync=Wszystkie Foldery s\u0105 zsynchronizowane
+quickinfo.root.in_sync=Wszystkie Foldery s\u0105 zsynchronizowane
 quickinfo.root.offline=Roz\u0142\u0105czony
 quickinfo.root.syncing=Synchronizacja w trakcie...
 quickinfo.root.title=Witaj w PowerFolder\!
 quickinfo.upload.active={0} aktywnych
 ##quickinfo.upload.completed={0} upload(s) recently completed
 quickinfo.upload.title=Stan Wysy\u0142ania
-quickinfo.user.isconnectedinet=W Internecie
-quickinfo.user.isconnectedlan=W sieci lokalnej (LAN)
-quickinfo.user.isdiconnected=Roz\u0142\u0105czony
-quickinfo.user.secureconnected=po\u0142\u0105czono bezpiecznie
+quickinfo.user.is_connected_inet=W Internecie
+quickinfo.user.is_connected_lan=W sieci lokalnej (LAN)
+quickinfo.user.is_diconnected=Roz\u0142\u0105czony
+quickinfo.user.secure_connected=po\u0142\u0105czono bezpiecznie
 quickinfo.webservice.connected=Po\u0142\u0105czony z Archiwum Online PowerFolder
-##quickinfo.webservice.foldersmirrored={0} of {1} folders get backed up. {2} online space used.
-quickinfo.webservice.notavailable=Archiwum Online nie jest dost\u0119pne w trybie Tylko sie\u0107 lokalna (LAN)
-quickinfo.webservice.notconnected=Nie po\u0142\u0105czony z Archiwum Online PowerFolder
-quickinfo.webservice.notsetup=Archiwum Online nie zosta\u0142o jeszcze skonfigurowane
+##quickinfo.webservice.folders_mirrored={0} of {1} folders get backed up. {2} online space used.
+quickinfo.webservice.not_available=Archiwum Online nie jest dost\u0119pne w trybie Tylko sie\u0107 lokalna (LAN)
+quickinfo.webservice.not_connected=Nie po\u0142\u0105czony z Archiwum Online PowerFolder
+quickinfo.webservice.not_setup=Archiwum Online nie zosta\u0142o jeszcze skonfigurowane
 quickinfo.webservice.title=Archiwum Online PowerFolder
 
 reconnect.description=Po\u0142\u0105cz ponownie z u\u017cytkownikiem
