--- a/src/etc/Translation_pt.properties
+++ b/src/etc/Translation_pt.properties
@@ -837,33 +837,33 @@ quickinfo.folder.number_of_files_and_size={0} Arquivo(s), {1}
 quickinfo.folder.status_of_folder=Estado de {0}
 quickinfo.friends.online={0} de {1} amigo(s) est\u00e1//est\u00e3o online
 quickinfo.friends.title=Buscar Amigos
-quickinfo.friends.usersfound={0} usuarios localizados
-quickinfo.myfolders.folders={0} em {1} pasta(s)
-quickinfo.myfolders.insyncall=Todas as pastas est\u00e3o sincronizadas
-quickinfo.myfolders.syncing=Sincronizando {0}
-quickinfo.myfolders.title=Estado de minhas pastas PowerFolder
+quickinfo.friends.users_found={0} usuarios localizados
+quickinfo.my_folders.folders={0} em {1} pasta(s)
+quickinfo.my_folders.insyncall=Todas as pastas est\u00e3o sincronizadas
+quickinfo.my_folders.syncing=Sincronizando {0}
+quickinfo.my_folders.title=Estado de minhas pastas PowerFolder
 quickinfo.previewfolders.folders={0} em {1} pasta(s)
 quickinfo.previewfolders.nosync=Pastas de Pr\u00e9-visualiza\u00e7\u00e3o n\u00e3o est\u00e3o sincronizadas
 quickinfo.previewfolders.title=Estado de pastas de Pr\u00e9-visualiza\u00e7\u00e3o
-quickinfo.recylcebin.files={0} arquivo(s) na Lixeira
-quickinfo.recylcebin.title=Lixeira
+quickinfo.recylce_bin.files={0} arquivo(s) na Lixeira
+quickinfo.recylce_bin.title=Lixeira
 quickinfo.root.downloads={0} baixa(s) completadas recentemente
 quickinfo.root.friends={0} amigo(s) online
-quickinfo.root.insync=Todas as pastas est\u00e3o sincronizadas
+quickinfo.root.in_sync=Todas as pastas est\u00e3o sincronizadas
 quickinfo.root.offline=Offline
 quickinfo.root.syncing=Sincroniza\u00e7\u00e3o em progresso...
 quickinfo.root.title=Bem Vindo ao PowerFolder\!
 quickinfo.upload.active={0} envio(s) ativos
 quickinfo.upload.title=Estado do Envio
-quickinfo.user.isconnectedinet=Est\u00e1 na Internet
-quickinfo.user.isconnectedlan=Est\u00e1 na Rede Local
-quickinfo.user.isdiconnected=Est\u00e1 disconectado
-quickinfo.user.secureconnected=Conex\u00e3o segura
+quickinfo.user.is_connected_inet=Est\u00e1 na Internet
+quickinfo.user.is_connected_lan=Est\u00e1 na Rede Local
+quickinfo.user.is_diconnected=Est\u00e1 disconectado
+quickinfo.user.secure_connected=Conex\u00e3o segura
 quickinfo.webservice.connected=Conectado ao Armazenamento Online do PowerFolder
-quickinfo.webservice.foldersmirrored={0} de {1} pasta(s) foram copiadas
-quickinfo.webservice.notavailable=Armazenamento Online n\u00e3o dispon\u00edvel em modo exclusivo de Rede Local
-quickinfo.webservice.notconnected=Disconectado do Armazenamento Online do PowerFolder
-quickinfo.webservice.notsetup=Armazenamento Online ainda n\u00e3o configurado
+quickinfo.webservice.folders_mirrored={0} de {1} pasta(s) foram copiadas
+quickinfo.webservice.not_available=Armazenamento Online n\u00e3o dispon\u00edvel em modo exclusivo de Rede Local
+quickinfo.webservice.not_connected=Disconectado do Armazenamento Online do PowerFolder
+quickinfo.webservice.not_setup=Armazenamento Online ainda n\u00e3o configurado
 quickinfo.webservice.title=Armazenamento Online do PowerFolder
 
 reconnect.description=Reconectar-se a este usu\u00e1rio agora
