--- a/src/etc/Translation_ru.properties
+++ b/src/etc/Translation_ru.properties
@@ -970,31 +970,31 @@ quickinfo.folder.preview=Preview - \u041D\u0435\u0442 \u0441\u0438\u043D\u0445\u
 quickinfo.folder.status_of_folder=\u0421\u0442\u0430\u0442\u0443\u0441 {0}
 quickinfo.folder.up_to_date_in=\u0410\u043A\u0442\u0443\u0430\u043B\u044C\u043D\u043E \u0432 {0}
 quickinfo.friends.online={0} \u0438\u0437 {1} \u0434\u0440\u0443\u0437\u0435\u0439 \u0432 \u0441\u0435\u0442\u0438
-quickinfo.friends.usersfound={0} \u0434\u0440\u0443\u0437\u0435\u0439 \u043D\u0430\u0439\u0434\u0435\u043D\u043E
-quickinfo.myfolders.in_sync_all=\u0412\u0441\u0435 \u043F\u0430\u043F\u043A\u0438 PowerFolder \u0441\u0438\u043D\u0445\u0440\u043E\u043D\u0438\u0437\u0438\u0440\u043E\u0432\u0430\u043D\u044B
-quickinfo.myfolders.powerfolders={0} \u0432 {1} \u043F\u0430\u043F\u043A\u0435(\u0430\u0445) PowerFolder
-quickinfo.myfolders.syncing=\u0421\u0438\u043D\u0445\u0440\u043E\u043D\u0438\u0437\u0438\u0440\u0443\u044E {0} \u043F\u0430\u043F\u043A\u0443(\u0438) PowerFolder
-quickinfo.myfolders.title=\u0421\u043E\u0441\u0442\u043E\u044F\u043D\u0438\u0435 \u043C\u043E\u0438\u0445 PowerFolder \u043F\u0430\u043F\u043E\u043A
-quickinfo.recylcebin.files={0} \u0444\u0430\u0439\u043B\u043E\u0432(\u0430) \u0432 \u041A\u043E\u0440\u0437\u0438\u043D\u0435
-quickinfo.recylcebin.title=\u041A\u043E\u0440\u0437\u0438\u043D\u0430
+quickinfo.friends.users_found={0} \u0434\u0440\u0443\u0437\u0435\u0439 \u043D\u0430\u0439\u0434\u0435\u043D\u043E
+quickinfo.my_folders.in_sync_all=\u0412\u0441\u0435 \u043F\u0430\u043F\u043A\u0438 PowerFolder \u0441\u0438\u043D\u0445\u0440\u043E\u043D\u0438\u0437\u0438\u0440\u043E\u0432\u0430\u043D\u044B
+quickinfo.my_folders.powerfolders={0} \u0432 {1} \u043F\u0430\u043F\u043A\u0435(\u0430\u0445) PowerFolder
+quickinfo.my_folders.syncing=\u0421\u0438\u043D\u0445\u0440\u043E\u043D\u0438\u0437\u0438\u0440\u0443\u044E {0} \u043F\u0430\u043F\u043A\u0443(\u0438) PowerFolder
+quickinfo.my_folders.title=\u0421\u043E\u0441\u0442\u043E\u044F\u043D\u0438\u0435 \u043C\u043E\u0438\u0445 PowerFolder \u043F\u0430\u043F\u043E\u043A
+quickinfo.recylce_bin.files={0} \u0444\u0430\u0439\u043B\u043E\u0432(\u0430) \u0432 \u041A\u043E\u0440\u0437\u0438\u043D\u0435
+quickinfo.recylce_bin.title=\u041A\u043E\u0440\u0437\u0438\u043D\u0430
 quickinfo.root.downloads={0} \u0437\u0430\u043A\u0430\u0447\u0435\u043A \u0437\u0435\u0432\u0435\u0440\u0448\u0435\u043D\u043E
 quickinfo.root.friends={0} \u0434\u0440\u0443\u0437\u0435\u0439 \u0432 \u0441\u0435\u0442\u0438
-quickinfo.root.insync=\u0412\u0441\u0435 \u041F\u0430\u043F\u043A\u0438 \u0441\u0438\u043D\u0445\u0440\u043E\u043D\u0438\u0437\u0438\u0440\u043E\u0432\u0430\u043D\u044B
+quickinfo.root.in_sync=\u0412\u0441\u0435 \u041F\u0430\u043F\u043A\u0438 \u0441\u0438\u043D\u0445\u0440\u043E\u043D\u0438\u0437\u0438\u0440\u043E\u0432\u0430\u043D\u044B
 quickinfo.root.offline=\u041D\u0435 \u0432 \u0441\u0435\u0442\u0438
 quickinfo.root.syncing=\u0421\u0438\u043D\u0445\u0440\u043E\u043D\u0438\u0437\u0430\u0446\u0438\u044F \u0432\u044B\u043F\u043E\u043B\u043D\u044F\u0442\u0441\u044F...
 quickinfo.root.title=\u0414\u043E\u0431\u0440\u043E \u041F\u043E\u0436\u0430\u043B\u043E\u0432\u0430\u0442\u044C \u0432 PowerFolder\!
 quickinfo.upload.active={0} \u0430\u043A\u0442\u0438\u0432\u043D\u044B\u0445 \u0437\u0430\u0433\u0440\u0443\u0437\u043E\u043A
 quickinfo.upload.completed={0} \u0437\u0430\u0433\u0440\u0443\u0437\u043A\u0438(\u043E\u043A) \u043D\u0435\u0434\u0430\u0432\u043D\u043E \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043D\u044B
 quickinfo.upload.title=\u0421\u0442\u0430\u0442\u0443\u0441 \u0437\u0430\u0433\u0440\u0443\u0437\u043E\u043A
-quickinfo.user.isconnectedinet=\u0412 \u0441\u0435\u0442\u0438 Internet
-quickinfo.user.isconnectedlan=\u0412 \u043B\u043E\u043A\u0430\u043B\u044C\u043D\u043E\u0439 \u0441\u0435\u0442\u0438 (LAN)
-quickinfo.user.isdiconnected=\u041E\u0442\u043A\u043B\u044E\u0447\u0435\u043D
-quickinfo.user.secureconnected=\u0431\u0435\u0437\u043E\u043F\u0430\u0441\u043D\u043E\u0435 \u0441\u043E\u0435\u0434\u0438\u043D\u0435\u043D\u0438\u0435
+quickinfo.user.is_connected_inet=\u0412 \u0441\u0435\u0442\u0438 Internet
+quickinfo.user.is_connected_lan=\u0412 \u043B\u043E\u043A\u0430\u043B\u044C\u043D\u043E\u0439 \u0441\u0435\u0442\u0438 (LAN)
+quickinfo.user.is_diconnected=\u041E\u0442\u043A\u043B\u044E\u0447\u0435\u043D
+quickinfo.user.secure_connected=\u0431\u0435\u0437\u043E\u043F\u0430\u0441\u043D\u043E\u0435 \u0441\u043E\u0435\u0434\u0438\u043D\u0435\u043D\u0438\u0435
 quickinfo.webservice.connected=\u0421\u043E\u0435\u0434\u0438\u043D\u0435\u043D\u043E \u0441 \u041E\u043D\u043B\u0430\u0439\u043D-\u0425\u0440\u0430\u043D\u0438\u043B\u0438\u0449\u0435\u043C PowerFolder
-quickinfo.webservice.foldersmirrored={0} \u0438\u0437 {1} \u043F\u0430\u043F\u043E\u043A \u0432\u043E\u0441\u0441\u0442\u0430\u043D\u043E\u0432\u043B\u0435\u043D\u044B. {2} \u043E\u043D\u043B\u0430\u0439\u043D \u043C\u0435\u0441\u0442\u0430 \u0438\u0441\u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u043D\u043E.
-quickinfo.webservice.notavailable=\u041E\u043D\u043B\u0430\u0439\u043D-\u0425\u0440\u0430\u043D\u0438\u043B\u0438\u0449\u0435 \u043D\u0435 \u0434\u043E\u0441\u0442\u0443\u043F\u043D\u043E \u0432 \u0440\u0435\u0436\u0438\u043C\u0435 \u0422\u041E\u041B\u042C\u041A\u041E LAN
-quickinfo.webservice.notconnected=\u0420\u0430\u0441\u0441\u043E\u0435\u0434\u0438\u043D\u0435\u043D\u043E \u0441 \u041E\u043D\u043B\u0430\u0439\u043D-\u0425\u0440\u0430\u043D\u0438\u043B\u0438\u0449\u0435\u043C PowerFolder
-quickinfo.webservice.notsetup=\u041E\u043D\u043B\u0430\u0439\u043D-\u0425\u0440\u0430\u043D\u0438\u043B\u0438\u0449\u0435 \u0435\u0449\u0435 \u043D\u0435 \u043D\u0430\u0441\u0442\u0440\u043E\u0435\u043D\u043E
+quickinfo.webservice.folders_mirrored={0} \u0438\u0437 {1} \u043F\u0430\u043F\u043E\u043A \u0432\u043E\u0441\u0441\u0442\u0430\u043D\u043E\u0432\u043B\u0435\u043D\u044B. {2} \u043E\u043D\u043B\u0430\u0439\u043D \u043C\u0435\u0441\u0442\u0430 \u0438\u0441\u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u043D\u043E.
+quickinfo.webservice.not_available=\u041E\u043D\u043B\u0430\u0439\u043D-\u0425\u0440\u0430\u043D\u0438\u043B\u0438\u0449\u0435 \u043D\u0435 \u0434\u043E\u0441\u0442\u0443\u043F\u043D\u043E \u0432 \u0440\u0435\u0436\u0438\u043C\u0435 \u0422\u041E\u041B\u042C\u041A\u041E LAN
+quickinfo.webservice.not_connected=\u0420\u0430\u0441\u0441\u043E\u0435\u0434\u0438\u043D\u0435\u043D\u043E \u0441 \u041E\u043D\u043B\u0430\u0439\u043D-\u0425\u0440\u0430\u043D\u0438\u043B\u0438\u0449\u0435\u043C PowerFolder
+quickinfo.webservice.not_setup=\u041E\u043D\u043B\u0430\u0439\u043D-\u0425\u0440\u0430\u043D\u0438\u043B\u0438\u0449\u0435 \u0435\u0449\u0435 \u043D\u0435 \u043D\u0430\u0441\u0442\u0440\u043E\u0435\u043D\u043E
 quickinfo.webservice.title=\u041E\u043D\u043B\u0430\u0439\u043D-\u0425\u0440\u0430\u043D\u0438\u043B\u0438\u0449\u0435 PowerFolder
 
 reconnect.description=\u0421\u043E\u0435\u0434\u0438\u043D\u044F\u0435\u0442 \u0441 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0435\u043C
