--- a/src/etc/Translation_ar.properties
+++ b/src/etc/Translation_ar.properties
@@ -970,31 +970,31 @@ quickinfo.folder.number_of_files_and_size={0} \u0645\u0644\u0641\u0627\u062a, {1
 quickinfo.folder.status_of_folder=\u0648\u0636\u0639\u064a\u0629 \u0627\u0644 {0}
 ##quickinfo.folder.up_to_date_in=Up to date in {0}
 quickinfo.friends.online={0} \u0645\u0646 {1} \u0623\u0635\u062f\u0642\u0627\u0621 \u0639\u0644\u0649 \u0627\u0644\u062e\u0637
-quickinfo.friends.usersfound={0} \u0645\u0633\u062a\u062e\u062f\u0645\u0648\u0646 \u0648\u062c\u062f\u0648\u0627
-##quickinfo.myfolders.in_sync_all=All PowerFolders are synchronized
-##quickinfo.myfolders.powerfolders={0} in {1} PowerFolder(s)
-##quickinfo.myfolders.syncing=Synchronizing {0} PowerFolder(s)
-##quickinfo.myfolders.title=Status of My PowerFolders
-quickinfo.recylcebin.files={0} \u0645\u0644\u0641\u0627\u062a \u0641\u064a \u0633\u0644\u0629 \u0627\u0644\u0645\u062d\u0630\u0648\u0641\u0627\u062a
-quickinfo.recylcebin.title=\u0633\u0644\u0629 \u0627\u0644\u0645\u062d\u0630\u0648\u0641\u0627\u062a
+quickinfo.friends.users_found={0} \u0645\u0633\u062a\u062e\u062f\u0645\u0648\u0646 \u0648\u062c\u062f\u0648\u0627
+##quickinfo.my_folders.in_sync_all=All PowerFolders are synchronized
+##quickinfo.my_folders.powerfolders={0} in {1} PowerFolder(s)
+##quickinfo.my_folders.syncing=Synchronizing {0} PowerFolder(s)
+##quickinfo.my_folders.title=Status of My PowerFolders
+quickinfo.recylce_bin.files={0} \u0645\u0644\u0641\u0627\u062a \u0641\u064a \u0633\u0644\u0629 \u0627\u0644\u0645\u062d\u0630\u0648\u0641\u0627\u062a
+quickinfo.recylce_bin.title=\u0633\u0644\u0629 \u0627\u0644\u0645\u062d\u0630\u0648\u0641\u0627\u062a
 quickinfo.root.downloads={0} \u0645\u0644\u0641\u0627\u062a \u062a\u062d\u0645\u064a\u0644 \u062a\u0645 \u0625\u0646\u062c\u0627\u0632\u0647\u0627
 quickinfo.root.friends={0} \u0623\u0635\u062f\u0642\u0627\u0621 \u0639\u0644\u0649 \u0627\u0644\u062e\u0637
-quickinfo.root.insync=\u062a\u0645 \u0645\u0632\u0627\u0645\u0646\u0629 \u062c\u0645\u064a\u0639 \u0627\u0644\u0645\u062c\u0644\u062f\u0627\u062a
+quickinfo.root.in_sync=\u062a\u0645 \u0645\u0632\u0627\u0645\u0646\u0629 \u062c\u0645\u064a\u0639 \u0627\u0644\u0645\u062c\u0644\u062f\u0627\u062a
 quickinfo.root.offline=\u062e\u0627\u0631\u062c \u0627\u0644\u062e\u0637
 quickinfo.root.syncing=\u0627\u0644\u0645\u0632\u0627\u0645\u0646\u0629 \u0642\u064a\u062f \u0627\u0644\u0639\u0645\u0644...
 quickinfo.root.title=\u0623\u0647\u0644\u0627 \u0628\u0643\u0645 \u0625\u0644\u0649 PowerFolder \!
 quickinfo.upload.active={0} \u0639\u0645\u0644\u064a\u0627\u062a \u0631\u0641\u0639 \u0642\u064a\u062f \u0627\u0644\u0627\u0646\u062c\u0627\u0632
 ##quickinfo.upload.completed={0} upload(s) recently completed
 quickinfo.upload.title=\u0648\u0636\u0639\u064a\u0629 \u0627\u0644\u0631\u0641\u0639
-quickinfo.user.isconnectedinet=\u0639\u0644\u0649 \u0627\u0644\u0627\u0646\u062a\u0631\u0646\u062a
-quickinfo.user.isconnectedlan=\u0639\u0644\u0649 \u0627\u0644\u0634\u0628\u0643\u0629
-quickinfo.user.isdiconnected=\u063a\u064a\u0631 \u0645\u062a\u0635\u0644
-quickinfo.user.secureconnected=\u0645\u062a\u0635\u0644 \u0628\u0627\u0645\u0627\u0646
+quickinfo.user.is_connected_inet=\u0639\u0644\u0649 \u0627\u0644\u0627\u0646\u062a\u0631\u0646\u062a
+quickinfo.user.is_connected_lan=\u0639\u0644\u0649 \u0627\u0644\u0634\u0628\u0643\u0629
+quickinfo.user.is_diconnected=\u063a\u064a\u0631 \u0645\u062a\u0635\u0644
+quickinfo.user.secure_connected=\u0645\u062a\u0635\u0644 \u0628\u0627\u0645\u0627\u0646
 quickinfo.webservice.connected=\u0645\u062a\u0635\u0644 \u0628\u0648\u062d\u062f\u0629 \u062a\u062e\u0632\u064a\u0646 PowerFolder \u0639\u0628\u0631 \u0627\u0644\u0627\u0646\u062a\u0631\u0646\u062a
-##quickinfo.webservice.foldersmirrored={0} of {1} folders get backed up. {2} online space used.
-quickinfo.webservice.notavailable=\u0648\u062d\u062f\u0629 \u0627\u0644\u062a\u062e\u0632\u064a\u0646 \u0639\u0628\u0631 \u0627\u0644\u0627\u0646\u062a\u0631\u0646\u062a \u063a\u064a\u0631 \u0645\u0648\u062c\u0648\u062f\u0629 \u0641\u064a \u0648\u0636\u0639\u064a\u0629 \u0627\u0644\u0634\u0628\u0643\u0629 \u0641\u0642\u0637
-quickinfo.webservice.notconnected=\u0623\u0642\u0637\u0639 \u0627\u0644\u0627\u062a\u0635\u0627\u0644 \u0628\u0648\u062d\u062f\u0629 \u062a\u062e\u0632\u064a\u0646 PowerFolder\u0639\u0628\u0631 \u0627\u0644\u0627\u0646\u062a\u0631\u0646\u062a
-quickinfo.webservice.notsetup=\u0648\u062d\u062f\u0629 \u0627\u0644\u062a\u062e\u0632\u064a\u0646 \u063a\u064a\u0631 \u0645\u0639\u062f\u0629 \u0628\u0639\u062f
+##quickinfo.webservice.folders_mirrored={0} of {1} folders get backed up. {2} online space used.
+quickinfo.webservice.not_available=\u0648\u062d\u062f\u0629 \u0627\u0644\u062a\u062e\u0632\u064a\u0646 \u0639\u0628\u0631 \u0627\u0644\u0627\u0646\u062a\u0631\u0646\u062a \u063a\u064a\u0631 \u0645\u0648\u062c\u0648\u062f\u0629 \u0641\u064a \u0648\u0636\u0639\u064a\u0629 \u0627\u0644\u0634\u0628\u0643\u0629 \u0641\u0642\u0637
+quickinfo.webservice.not_connected=\u0623\u0642\u0637\u0639 \u0627\u0644\u0627\u062a\u0635\u0627\u0644 \u0628\u0648\u062d\u062f\u0629 \u062a\u062e\u0632\u064a\u0646 PowerFolder\u0639\u0628\u0631 \u0627\u0644\u0627\u0646\u062a\u0631\u0646\u062a
+quickinfo.webservice.not_setup=\u0648\u062d\u062f\u0629 \u0627\u0644\u062a\u062e\u0632\u064a\u0646 \u063a\u064a\u0631 \u0645\u0639\u062f\u0629 \u0628\u0639\u062f
 quickinfo.webservice.title=\u0648\u062d\u062f\u0629 \u062a\u062e\u0632\u064a\u0646 PowerFolder \u0639\u0628\u0631 \u0627\u0644\u0627\u0646\u062a\u0631\u0646\u062a
 
 reconnect.description=\u0623\u0639\u062f \u0627\u0644\u0627\u062a\u0635\u0627\u0644 \u0628\u0647\u0630\u0627 \u0627\u0644\u0645\u0633\u062a\u062e\u062f\u0645 \u0627\u0644\u0627\u0646
