--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -972,31 +972,31 @@ quickinfo.folder.preview=Pr\u00E9visualisation - Pas de synchronisation
 quickinfo.folder.status_of_folder=Etat de {0}
 quickinfo.folder.up_to_date_in=A jour dans {0}
 quickinfo.friends.online={0} ami(e)s sur {1} sont connect\u00E9(e)s
-quickinfo.friends.usersfound={0} utilisateur(s) trouv\u00E9(s)
-quickinfo.myfolders.in_sync_all=Tous les dossiers PowerFolder sont synchronis\u00E9s
-quickinfo.myfolders.powerfolders={0} dans {1} dossier(s) PowerFolder
-quickinfo.myfolders.syncing=Synchronisation de {0} dossier(s) PowerFolder
-quickinfo.myfolders.title=Statut de mon PowerFolder
-quickinfo.recylcebin.files={0} fichier(s) dans la poubelle PowerFolder
-quickinfo.recylcebin.title=Poubelle PowerFolder
+quickinfo.friends.users_found={0} utilisateur(s) trouv\u00E9(s)
+quickinfo.my_folders.in_sync_all=Tous les dossiers PowerFolder sont synchronis\u00E9s
+quickinfo.my_folders.powerfolders={0} dans {1} dossier(s) PowerFolder
+quickinfo.my_folders.syncing=Synchronisation de {0} dossier(s) PowerFolder
+quickinfo.my_folders.title=Statut de mon PowerFolder
+quickinfo.recylce_bin.files={0} fichier(s) dans la poubelle PowerFolder
+quickinfo.recylce_bin.title=Poubelle PowerFolder
 quickinfo.root.downloads={0} t\u00E9l\u00E9chargement(s) r\u00E9cemment termin\u00E9(s)
 quickinfo.root.friends={0} ami(e)s connect\u00E9(e)s
-quickinfo.root.insync=Tous les dossiers sont synchronis\u00E9s
+quickinfo.root.in_sync=Tous les dossiers sont synchronis\u00E9s
 quickinfo.root.offline=D\u00E9connect\u00E9
 quickinfo.root.syncing=Synchronisation en cours...
 quickinfo.root.title=Bienvenue \u00E0 PowerFolder\!
 quickinfo.upload.active={0} \u00E9mission(s) en cours
 quickinfo.upload.completed={0} \u00E9mession(s) r\u00E9centes termin\u00E9es
 quickinfo.upload.title=Etat des \u00E9missions
-quickinfo.user.isconnectedinet=Est sur Internet
-quickinfo.user.isconnectedlan=Est sur le LAN
-quickinfo.user.isdiconnected=Est d\u00E9connect\u00E9(e)
-quickinfo.user.secureconnected=Connect\u00E9(e) de fa\u00C3\u00A7on s\u00E9curis\u00E9e
+quickinfo.user.is_connected_inet=Est sur Internet
+quickinfo.user.is_connected_lan=Est sur le LAN
+quickinfo.user.is_diconnected=Est d\u00E9connect\u00E9(e)
+quickinfo.user.secure_connected=Connect\u00E9(e) de fa\u00C3\u00A7on s\u00E9curis\u00E9e
 quickinfo.webservice.connected=Connect\u00E9 au stockage en ligne de PowerFolder
-quickinfo.webservice.foldersmirrored={0} de {1} dossier(s) ont \u00E9t\u00E9 sauvegard\u00E9(s). {2} d'espace en ligne utilis\u00E9.
-quickinfo.webservice.notavailable=Le stockage en ligne n'est pas disponible en mode LAN
-quickinfo.webservice.notconnected=D\u00E9connect\u00E9 de l'espace de stockage en ligne PowerFolder
-quickinfo.webservice.notsetup=Stockage en ligne non configur\u00E9
+quickinfo.webservice.folders_mirrored={0} de {1} dossier(s) ont \u00E9t\u00E9 sauvegard\u00E9(s). {2} d'espace en ligne utilis\u00E9.
+quickinfo.webservice.not_available=Le stockage en ligne n'est pas disponible en mode LAN
+quickinfo.webservice.not_connected=D\u00E9connect\u00E9 de l'espace de stockage en ligne PowerFolder
+quickinfo.webservice.not_setup=Stockage en ligne non configur\u00E9
 quickinfo.webservice.title=Stockage en ligne PowerFolder
 
 reconnect.description=Se reconnecter \u00E0 cet utilisateur maintenant
