--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -967,31 +967,31 @@ quickinfo.folder.preview=\u30D7\u30EC\u30D3\u30E5\u30FC - \u540C\u671F\u306A\u30
 quickinfo.folder.status_of_folder={0} \u306E\u72B6\u614B
 quickinfo.folder.up_to_date_in={0} \u306B\u66F4\u65B0
 quickinfo.friends.online=\u53CB\u4EBA {1} \u4EBA\u4E2D {0} \u4EBA\u304C\u30AA\u30F3\u30E9\u30A4\u30F3
-quickinfo.friends.usersfound=\u8A72\u5F53\u30E6\u30FC\u30B6\u30FC {0}
-quickinfo.myfolders.in_sync_all=\u5168\u30D1\u30EF\u30FC\u30D5\u30A9\u30EB\u30C0\u540C\u671F\u6E08\u307F
-quickinfo.myfolders.powerfolders={1} \u30D1\u30EF\u30FC\u30D5\u30A9\u30EB\u30C0\u4E2D {0}
-quickinfo.myfolders.syncing=\u30D1\u30EF\u30FC\u30D5\u30A9\u30EB\u30C0\u540C\u671F\u4E2D {0}
-quickinfo.myfolders.title=\u30DE\u30A4 \u30D1\u30EF\u30FC\u30D5\u30A9\u30EB\u30C0\u306E\u72B6\u614B
-quickinfo.recylcebin.files=\u3054\u307F\u7BB1\u5185\u306E\u30D5\u30A1\u30A4\u30EB {0}
-quickinfo.recylcebin.title=\u3054\u307F\u7BB1
+quickinfo.friends.users_found=\u8A72\u5F53\u30E6\u30FC\u30B6\u30FC {0}
+quickinfo.my_folders.in_sync_all=\u5168\u30D1\u30EF\u30FC\u30D5\u30A9\u30EB\u30C0\u540C\u671F\u6E08\u307F
+quickinfo.my_folders.powerfolders={1} \u30D1\u30EF\u30FC\u30D5\u30A9\u30EB\u30C0\u4E2D {0}
+quickinfo.my_folders.syncing=\u30D1\u30EF\u30FC\u30D5\u30A9\u30EB\u30C0\u540C\u671F\u4E2D {0}
+quickinfo.my_folders.title=\u30DE\u30A4 \u30D1\u30EF\u30FC\u30D5\u30A9\u30EB\u30C0\u306E\u72B6\u614B
+quickinfo.recylce_bin.files=\u3054\u307F\u7BB1\u5185\u306E\u30D5\u30A1\u30A4\u30EB {0}
+quickinfo.recylce_bin.title=\u3054\u307F\u7BB1
 quickinfo.root.downloads=\u6700\u8FD1\u5B8C\u4E86\u3057\u305F\u30C0\u30A6\u30F3\u30ED\u30FC\u30C9 {0}
 quickinfo.root.friends=\u30AA\u30F3\u30E9\u30A4\u30F3\u306E\u53CB\u4EBA {0}
-quickinfo.root.insync=\u5168\u30D5\u30A9\u30EB\u30C0\u540C\u671F\u6E08\u307F
+quickinfo.root.in_sync=\u5168\u30D5\u30A9\u30EB\u30C0\u540C\u671F\u6E08\u307F
 quickinfo.root.offline=\u30AA\u30D5\u30E9\u30A4\u30F3
 quickinfo.root.syncing=\u540C\u671F\u9032\u884C\u4E2D...
 quickinfo.root.title=PowerFolder \u306B\u3088\u3046\u3053\u305D\uFF01
 quickinfo.upload.active=\u51E6\u7406\u4E2D\u306E\u30A2\u30C3\u30D7\u30ED\u30FC\u30C9 {0}
 quickinfo.upload.completed=\u6700\u8FD1\u5B8C\u4E86\u3057\u305F\u30A2\u30C3\u30D7\u30ED\u30FC\u30C9 {0}
 quickinfo.upload.title=\u30A2\u30C3\u30D7\u30ED\u30FC\u30C9\u306E\u72B6\u614B
-quickinfo.user.isconnectedinet=\u306F\u30A4\u30F3\u30BF\u30FC\u30CD\u30C3\u30C8\u4E0A\u3067\u3059
-quickinfo.user.isconnectedlan=LAN \u5185\u3067\u3059
-quickinfo.user.isdiconnected=\u306F\u5207\u65AD\u3055\u308C\u3066\u3044\u307E\u3059
-quickinfo.user.secureconnected=\u5B89\u5168\u306B\u63A5\u7D9A\u6E08\u307F
+quickinfo.user.is_connected_inet=\u306F\u30A4\u30F3\u30BF\u30FC\u30CD\u30C3\u30C8\u4E0A\u3067\u3059
+quickinfo.user.is_connected_lan=LAN \u5185\u3067\u3059
+quickinfo.user.is_diconnected=\u306F\u5207\u65AD\u3055\u308C\u3066\u3044\u307E\u3059
+quickinfo.user.secure_connected=\u5B89\u5168\u306B\u63A5\u7D9A\u6E08\u307F
 quickinfo.webservice.connected=PowerFolder Web\u30B5\u30FC\u30D3\u30B9\u306B\u63A5\u7D9A\u6E08\u307F
-quickinfo.webservice.foldersmirrored={1} \u4E2D {0} \u30D5\u30A9\u30EB\u30C0\u3092\u30D0\u30C3\u30AF\u30A2\u30C3\u30D7\u3001{2} \u30AA\u30F3\u30E9\u30A4\u30F3\u30B9\u30DA\u30FC\u30B9\u4F7F\u7528
-quickinfo.webservice.notavailable=LAN \u5185\u9650\u5B9A\u30E2\u30FC\u30C9\u3067\u306F\u30AA\u30F3\u30E9\u30A4\u30F3\u30B9\u30C8\u30EC\u30FC\u30B8\u5229\u7528\u4E0D\u53EF
-quickinfo.webservice.notconnected=PowerFolder Web\u30B5\u30FC\u30D3\u30B9\u306B\u672A\u63A5\u7D9A
-quickinfo.webservice.notsetup=PowerFolder Web\u30B5\u30FC\u30D3\u30B9\u304C\u672A\u8A2D\u5B9A
+quickinfo.webservice.folders_mirrored={1} \u4E2D {0} \u30D5\u30A9\u30EB\u30C0\u3092\u30D0\u30C3\u30AF\u30A2\u30C3\u30D7\u3001{2} \u30AA\u30F3\u30E9\u30A4\u30F3\u30B9\u30DA\u30FC\u30B9\u4F7F\u7528
+quickinfo.webservice.not_available=LAN \u5185\u9650\u5B9A\u30E2\u30FC\u30C9\u3067\u306F\u30AA\u30F3\u30E9\u30A4\u30F3\u30B9\u30C8\u30EC\u30FC\u30B8\u5229\u7528\u4E0D\u53EF
+quickinfo.webservice.not_connected=PowerFolder Web\u30B5\u30FC\u30D3\u30B9\u306B\u672A\u63A5\u7D9A
+quickinfo.webservice.not_setup=PowerFolder Web\u30B5\u30FC\u30D3\u30B9\u304C\u672A\u8A2D\u5B9A
 quickinfo.webservice.title=\u30AA\u30F3\u30E9\u30A4\u30F3\u30B9\u30C8\u30EC\u30FC\u30B8 - Web\u30B5\u30FC\u30D3\u30B9
 
 reconnect.description=\u3053\u306E\u30E6\u30FC\u30B6\u30FC\u3078\u306E\u518D\u63A5\u7D9A\u3092\u76F4\u3061\u306B\u8A66\u884C
