--- a/src/etc/Translation_sv.properties
+++ b/src/etc/Translation_sv.properties
@@ -970,31 +970,31 @@ quickinfo.folder.number_of_files_and_size={0} fil(er), {1}
 quickinfo.folder.status_of_folder=Status av {0}
 ##quickinfo.folder.up_to_date_in=Up to date in {0}
 quickinfo.friends.online={0} av {1} v\u00e4n(ner) \u00e4r online
-quickinfo.friends.usersfound={0} anv\u00e4ndare hittade
-##quickinfo.myfolders.in_sync_all=All PowerFolders are synchronized
-##quickinfo.myfolders.powerfolders={0} in {1} PowerFolder(s)
-##quickinfo.myfolders.syncing=Synchronizing {0} PowerFolder(s)
-##quickinfo.myfolders.title=Status of My PowerFolders
-quickinfo.recylcebin.files={0} fil(er) i papperskorgen
-quickinfo.recylcebin.title=Papperskorgen
+quickinfo.friends.users_found={0} anv\u00e4ndare hittade
+##quickinfo.my_folders.in_sync_all=All PowerFolders are synchronized
+##quickinfo.my_folders.powerfolders={0} in {1} PowerFolder(s)
+##quickinfo.my_folders.syncing=Synchronizing {0} PowerFolder(s)
+##quickinfo.my_folders.title=Status of My PowerFolders
+quickinfo.recylce_bin.files={0} fil(er) i papperskorgen
+quickinfo.recylce_bin.title=Papperskorgen
 quickinfo.root.downloads={0} nedladdning(ar) nyligen klara
 quickinfo.root.friends={0} v\u00e4n(ner) online
-quickinfo.root.insync=Alla foldrar \u00e4r synkroniserade
+quickinfo.root.in_sync=Alla foldrar \u00e4r synkroniserade
 quickinfo.root.offline=Offline
 quickinfo.root.syncing=Synkroniserar...
 quickinfo.root.title=V\u00e4lkommen till PowerFolder\!
 quickinfo.upload.active={0} aktiva uppladdningar
 ##quickinfo.upload.completed={0} upload(s) recently completed
 quickinfo.upload.title=Uppladdningsstatus
-quickinfo.user.isconnectedinet=\u00c4r p\u00e5 Internet
-quickinfo.user.isconnectedlan=\u00c4r p\u00e5 LAN
-quickinfo.user.isdiconnected=\u00c4r ej ansluten
-quickinfo.user.secureconnected=s\u00e4kert ansluten
+quickinfo.user.is_connected_inet=\u00c4r p\u00e5 Internet
+quickinfo.user.is_connected_lan=\u00c4r p\u00e5 LAN
+quickinfo.user.is_diconnected=\u00c4r ej ansluten
+quickinfo.user.secure_connected=s\u00e4kert ansluten
 ##quickinfo.webservice.connected=Connected to the PowerFolder Online Storage
-##quickinfo.webservice.foldersmirrored={0} of {1} folders get backed up. {2} online space used.
-##quickinfo.webservice.notavailable=Online Storage not available in LAN only mode
-##quickinfo.webservice.notconnected=Disconnected from PowerFolder Online Storage
-##quickinfo.webservice.notsetup=Online Storage not configured yet
+##quickinfo.webservice.folders_mirrored={0} of {1} folders get backed up. {2} online space used.
+##quickinfo.webservice.not_available=Online Storage not available in LAN only mode
+##quickinfo.webservice.not_connected=Disconnected from PowerFolder Online Storage
+##quickinfo.webservice.not_setup=Online Storage not configured yet
 ##quickinfo.webservice.title=PowerFolder Online Storage
 
 reconnect.description=\u00c5teransluter till denna anv\u00e4ndare nu
