--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -969,31 +969,31 @@ quickinfo.folder.preview=\u9884\u89c8 - \u4e0d\u540c\u6b65
 quickinfo.folder.status_of_folder={0} \u7684\u72b6\u6001
 quickinfo.folder.up_to_date_in=\u66f4\u65b0 {0}
 quickinfo.friends.online={1} \u4f4d\u597d\u53cb\u4e2d\u6709 {0} \u5728\u7ebf
-quickinfo.friends.usersfound=\u627e\u5230 {0} \u4f4d\u7528\u6237
-quickinfo.myfolders.in_sync_all=\u6240\u6709\u7684PowerFolder\u90fd\u5df2\u7ecf\u540c\u6b65
-quickinfo.myfolders.powerfolders= {1} \u4e2aPowerFolder\u4e2d\u7684 {0} \u4e2a
-quickinfo.myfolders.syncing=\u6b63\u5728\u540c\u6b65 {0} \u4e2aPowerFolder
-quickinfo.myfolders.title=\u6211\u7684PowerFolder\u7684\u72b6\u6001
-quickinfo.recylcebin.files={0} \u4e2a\u6587\u4ef6
-quickinfo.recylcebin.title=\u56de\u6536\u7ad9
+quickinfo.friends.users_found=\u627e\u5230 {0} \u4f4d\u7528\u6237
+quickinfo.my_folders.in_sync_all=\u6240\u6709\u7684PowerFolder\u90fd\u5df2\u7ecf\u540c\u6b65
+quickinfo.my_folders.powerfolders= {1} \u4e2aPowerFolder\u4e2d\u7684 {0} \u4e2a
+quickinfo.my_folders.syncing=\u6b63\u5728\u540c\u6b65 {0} \u4e2aPowerFolder
+quickinfo.my_folders.title=\u6211\u7684PowerFolder\u7684\u72b6\u6001
+quickinfo.recylce_bin.files={0} \u4e2a\u6587\u4ef6
+quickinfo.recylce_bin.title=\u56de\u6536\u7ad9
 quickinfo.root.downloads=\u6700\u8fd1\u5b8c\u6210 {0} \u4e2a\u4e0b\u8f7d
 quickinfo.root.friends={0} \u4f4d\u597d\u53cb\u5728\u7ebf
-quickinfo.root.insync=\u5df2\u540c\u6b65\u6240\u6709\u6587\u4ef6\u5939
+quickinfo.root.in_sync=\u5df2\u540c\u6b65\u6240\u6709\u6587\u4ef6\u5939
 quickinfo.root.offline=\u79bb\u7ebf
 quickinfo.root.syncing=\u6b63\u5728\u540c\u6b65\u2026\u2026
 quickinfo.root.title=\u6b22\u8fce\u4f7f\u7528PowerFolder\uff01
 quickinfo.upload.active={0} \u4e2a\u6d3b\u8dc3\u4e0a\u4f20
 quickinfo.upload.completed=\u6700\u8fd1\u5b8c\u6210 {0} \u4e2a\u4e0a\u4f20
 quickinfo.upload.title=\u4e0a\u4f20\u72b6\u6001
-quickinfo.user.isconnectedinet=\u4e92\u8054\u7f51
-quickinfo.user.isconnectedlan=\u5c40\u57df\u7f51
-quickinfo.user.isdiconnected=\u672a\u8fde\u63a5
-quickinfo.user.secureconnected=\u5b89\u5168\u8fde\u63a5
+quickinfo.user.is_connected_inet=\u4e92\u8054\u7f51
+quickinfo.user.is_connected_lan=\u5c40\u57df\u7f51
+quickinfo.user.is_diconnected=\u672a\u8fde\u63a5
+quickinfo.user.secure_connected=\u5b89\u5168\u8fde\u63a5
 quickinfo.webservice.connected=\u8fde\u63a5\u5230PowerFolder\u7f51\u7edc\u670d\u52a1
-quickinfo.webservice.foldersmirrored={1} \u4e2a\u6587\u4ef6\u5939\u4e2d\u7684 {0} \u4e2a\u88ab\u5907\u4efd\u3002\u4f7f\u7528 {2} \u5728\u7ebf\u7a7a\u95f4\u3002
-quickinfo.webservice.notavailable=\u5728\u7ebf\u5b58\u50a8\u5728\u201c\u4ec5\u7528\u5c40\u57df\u7f51\u201d\u7684\u6a21\u5f0f\u4e0b\u65e0\u6548
-quickinfo.webservice.notconnected=\u65ad\u5f00PowerFolder\u7f51\u7edc\u670d\u52a1
-quickinfo.webservice.notsetup=\u8fd8\u6ca1\u6709\u914d\u7f6ePowerFolder\u7f51\u7edc\u670d\u52a1
+quickinfo.webservice.folders_mirrored={1} \u4e2a\u6587\u4ef6\u5939\u4e2d\u7684 {0} \u4e2a\u88ab\u5907\u4efd\u3002\u4f7f\u7528 {2} \u5728\u7ebf\u7a7a\u95f4\u3002
+quickinfo.webservice.not_available=\u5728\u7ebf\u5b58\u50a8\u5728\u201c\u4ec5\u7528\u5c40\u57df\u7f51\u201d\u7684\u6a21\u5f0f\u4e0b\u65e0\u6548
+quickinfo.webservice.not_connected=\u65ad\u5f00PowerFolder\u7f51\u7edc\u670d\u52a1
+quickinfo.webservice.not_setup=\u8fd8\u6ca1\u6709\u914d\u7f6ePowerFolder\u7f51\u7edc\u670d\u52a1
 quickinfo.webservice.title=\u5728\u7ebf\u5b58\u50a8 - \u7f51\u7edc\u670d\u52a1
 
 reconnect.description=\u73b0\u5728\u91cd\u65b0\u8fde\u63a5\u8be5\u7528\u6237
